--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.0.0",
+    "apollo-datasource-rest": "^0.1.5",
     "apollo-server": "^2.1.0",
     "graphql": "^14.0.2",
     "node-fetch": "^2.2.0"
